@@ -4,4 +4,11 @@
 >   - ADVISSE Maël
 >   - BEDNAROWICZ Louison
 > **Specialité :** 3A ICY TP1
-> 
+
+
+
+## Commandes pour javaFX
+- Télécharger JavaFX et le mettre dans les variables d'environnement (.bashrc)
+- `javac --module-path $PATH_TO_FX --add-modules javafx.controls ClientGUI.java` (compilation)
+- `java --module-path $PATH_TO_FX --add-modules javafx.controls ClientGUI` (exécution)
+- 
